--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@google/earthengine": "^0.1.206",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "pg": "^7.12.1"
