--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/earthengine": "^0.1.206",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "pg": "^7.12.1",
+    "pg": "^7.14.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0rv/CMPT276-NotAWebApp"
+    "url": "git+https://github.com/0rv/CMPT276-NotAWebApp.git"
   },
   "keywords": [
     "node",
