--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@google/earthengine": "^0.1.206",
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
+    "nodemailer": "^6.3.1",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "pg": "^7.14.0",
     "socket.io": "^2.3.0"
   },
